# p1-starting-an-api-thanhnhatquangmai

./: .gitignore  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
